--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,6 +14,7 @@
       href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=d9SWtfYd"></script>
 
 
     <style>
