Added text to speech announcements

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -82,6 +82,15 @@
         box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
 	      animation: pulse-white 2s infinite;
       }
+
+      .people_list {
+        background-color: #636363;
+      }
+
+      .layout-pane {
+        background-color: #636363;
+      }
+
       @keyframes pulse-white {
         0% {
           transform: scale(0.95);
@@ -170,7 +179,6 @@
         flex: 0 0 auto;
         height: 100%;
         cursor: col-resize;
-        backdrop-filter: blur(15px);
         background-color: #565656;
         mix-blend-mode: overlay;
         border-right: 2px solid black;
